--- a/config.yml
+++ b/config.yml
@@ -22,3 +22,5 @@ packages:
     name: Kafka Mapper Consumer
   - id: analytics-datastore-clickhouse
     name: Analytics Datastore Clickhouse
+  - id: dashboard-visualiser-superset
+    name: Dashboard Visualiser Superset
