--- a/.env.local
+++ b/.env.local
@@ -22,8 +22,8 @@ OPENHIM_MONGO_ATNAURL=mongodb://mongo-1:27017/openhim
 
 HAPI_FHIR_INSTANCES=1
 REPMGR_PRIMARY_HOST=postgres-1
-REPMGR_PARTNER_NODES=postgres-1,postgres-2,postgres-3
-POSTGRES_REPLICA_SET=postgres-1:5432,postgres-2:5432,postgres-3:5432
+REPMGR_PARTNER_NODES=postgres-1
+POSTGRES_REPLICA_SET=postgres-1:5432
 
 # Reverse Proxy - Nginx
 
