Convert cares to custom package To ensure we can easily start it up with other custom package implementations of the platform TB-41 TB-42

--- a/config.yml
+++ b/config.yml
@@ -1,5 +1,5 @@
 ---
-image: jembi/cares-on-platform
+image: jembi/platform
 platformVersion: latest
 defaultTargetLauncher: swarm
 disableKubernetes: true
