--- a/importer/docker-compose.config.yml
+++ b/importer/docker-compose.config.yml
@@ -36,7 +36,37 @@ services:
         target: /superset-export.zip
     command: sh -c "cd / && npm i axios form-data && node /supersetConfig.js"
 
+  cares-openhim-config-importer:
+    image: jembi/instantohie-config-importer
+    deploy:
+      restart_policy:
+        condition: none
+    environment:
+      OPENHIM_API_HOSTNAME: 'openhim-core'
+      OPENHIM_API_PORT: 8080
+      OPENHIM_API_USERNAME: 'root@openhim.org'
+      OPENHIM_API_PASSWORD: 'instant101'
+      # Reject unauthorised is only needed if the OpenHIM's SSL is not setup
+      NODE_TLS_REJECT_UNAUTHORIZED: 0
+    configs:
+      - source: cares-openhim-config-openhimConfig.js
+        target: /openhimConfig.js
+      - source: cares-openhim-config-openhim-import.json
+        target: /openhim-import.json
+    # This command will only attempt to import the OpenHIM config when the heartbeat responds with a 2xx
+    command: sh -c "wait-on -t 60000 https-get://openhim-core:8080/heartbeat && node /openhimConfig.js"
+
 configs:
+  cares-openhim-config-openhimConfig.js:
+    file: ./openhim/openhimConfig.js
+    name: cares-openhim-config-openhimConfig.js-${cares_openhim_config_openhimConfig_js_DIGEST:?err}
+    labels:
+      name: cares
+  cares-openhim-config-openhim-import.json:
+    file: ./openhim/openhim-import.json
+    name: cares-openhim-config-openhim-import.json-${cares_openhim_config_openhim_import_json_DIGEST:?err}
+    labels:
+      name: cares
   cares-clickhouse-config-clickhouseConfig.js:
     file: ./analytics-datastore-clickhouse/clickhouseConfig.js
     name: cares-clickhouse-config-clickhouseConfig.js-${cares_clickhouse_config_clickhouseConfig_js_DIGEST:?err}
