Add qa env var and deploy script For ease of deployment to QA environment

--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,7 @@ build/Release
 # Dependency directories
 node_modules/
 jspm_packages/
+packages/
 
 # TypeScript v1 declaration files
 typings/
@@ -77,3 +78,6 @@ typings/
 platform-linux
 platform.exe
 platform-macos
+
+# Custom Packages
+disi-on-platform/
