Add hapi-fhir importer to CARES To add fhir IG into Hapi Fhir

--- a/.env.local
+++ b/.env.local
@@ -52,3 +52,7 @@ KAFDROP_MEMORY_RESERVE=500M
 MONGO_NUM_DAILY_BACKUP=7
 MONGO_NUM_WEEKLY_BACKUP=4
 MONGO_NUM_MONTHLY_BACKUP=3
+
+# FHIR IG 
+
+FHIR_IG_URL=https://openhie.github.io/cares-covid-ig
