Revert "PLAT-526 Not filter encounter + update codes"

--- a/importer/kafka-mapper-consumer/mapping/fhir-mapping.json
+++ b/importer/kafka-mapper-consumer/mapping/fhir-mapping.json
@@ -76,6 +76,7 @@
     "tableMappings": [
       {
         "targetTable": "encounter",
+        "filter": "Encounter.meta.profile = 'http://openhie.org/fhir/covid19-casereporting/StructureDefinition/covid19-encounter'",
         "columnMappings": [
           {
             "columnName": "patient_id",
