--- a/importer/docker-compose.config.yml
+++ b/importer/docker-compose.config.yml
@@ -8,8 +8,8 @@ services:
       restart_policy:
         condition: none
     environment:
-      CLICKHOUSE_HOST: ${CLICKHOUSE_HOST:-analytics-datastore-clickhouse}
-      CLICKHOUSE_PORT: ${CLICKHOUSE_PORT:-8123}
+      CLICKHOUSE_HOST: ${CLICKHOUSE_HOST}
+      CLICKHOUSE_PORT: ${CLICKHOUSE_PORT}
     configs:
       - source: cares-clickhouse-config-clickhouseConfig.js
         target: /clickhouseConfig.js
@@ -25,10 +25,10 @@ services:
     environment:
       SUPERSET_SERVICE_NAME: 'dashboard-visualiser-superset'
       SUPERSET_API_PORT: 8088
-      SUPERSET_API_PASSWORD: ${SUPERSET_API_PASSWORD:-admin}
-      SUPERSET_API_USERNAME: ${SUPERSET_API_USERNAME:-admin}
-      CONFIG_FILE: ${CONFIG_FILE:-superset-export.zip}
-      SUPERSET_SSL: ${SUPERSET_SSL:-false}
+      SUPERSET_API_PASSWORD: ${SUPERSET_API_PASSWORD}
+      SUPERSET_API_USERNAME: ${SUPERSET_API_USERNAME}
+      CONFIG_FILE: ${CONFIG_FILE}
+      SUPERSET_SSL: ${SUPERSET_SSL}
     configs:
       - source: cares-superset-config-supersetConfig.js
         target: /supersetConfig.js
