--- a/importer/docker-compose.config.yml
+++ b/importer/docker-compose.config.yml
@@ -34,7 +34,7 @@ services:
         target: /supersetConfig.js
       - source: cares-superset-config-superset-export.zip
         target: /superset-export.zip
-    command: sh -c "cd / && npm i axios@v1.1.3 form-data && node /supersetConfig.js"
+    command: sh -c "cd / && npm i axios form-data && node /supersetConfig.js"
 
   hapi-fhir-config-importer:
     image: node:erbium-alpine
@@ -45,7 +45,7 @@ services:
     configs: 
       - source: cares-hapi-fhir-fhirConfig.js
         target: /fhirConfig.js
-    command: sh -c "cd / && npm i axios adm-zip && npm i wait-on -g && wait-on -t 600000 http-get://hapi-fhir:8080 && node /fhirConfig.js"
+    command: sh -c "cd / && npm i axios@v1.1.3 adm-zip && npm i wait-on -g && wait-on -t 600000 http-get://hapi-fhir:8080 && node /fhirConfig.js"
 
 configs:
   cares-clickhouse-config-clickhouseConfig.js:
