Update Observation table

--- a/importer/kafka-mapper-consumer/mapping/fhir-mapping.json
+++ b/importer/kafka-mapper-consumer/mapping/fhir-mapping.json
@@ -163,6 +163,10 @@
           {
             "columnName": "patient_id",
             "fhirPath": "Observation.subject.reference.replace('Patient/', '')"
+          },
+          {
+            "columnName": "encounter_id",
+            "fhirPath": "Observation.encounter.reference.replace('Encounter/', '')"
           }
         ]
       }
