--- a/.gitignore
+++ b/.gitignore
@@ -74,6 +74,6 @@ typings/
 /docs/.cache-loader
 
 # Built Go Binaries
-platform-linux
-platform.exe
-platform-macos
+instant-linux
+instant.exe
+instant-macos
