--- a/.env.local
+++ b/.env.local
@@ -1,5 +1,4 @@
-# General
-
+# Global
 CLUSTERED_MODE=false
 
 # LOG
@@ -7,9 +6,3 @@ CLUSTERED_MODE=false
 DEBUG=0
 BASHLOG_FILE=0
 BASHLOG_FILE_PATH=platform.log
-
-# Disables Fhir validation agains IG
-DISABLE_VALIDATION=true
-
-# Name of folder containing the Fhir IG importer scripts
-FHIR_CONFIG_IMPORTER_FOLDER_NAME=hapi-fhir
