--- a/importer/docker-compose.config.yml
+++ b/importer/docker-compose.config.yml
@@ -14,6 +14,8 @@ services:
       - source: cares-clickhouse-config-clickhouseConfig.js
         target: /clickhouseConfig.js
     command: sh -c "cd / && npm i clickhouse && node /clickhouseConfig.js"
+    networks:
+      clickhouse:
 
   cares-superset-config-importer:
     image: node:erbium-alpine
@@ -33,6 +35,8 @@ services:
       - source: cares-superset-config-superset-export.zip
         target: /superset-export.zip
     command: sh -c "cd / && npm i axios form-data && node /supersetConfig.js"
+    networks:
+      clickhouse:
 
   hapi-fhir-config-importer:
     image: node:erbium-alpine
@@ -40,10 +44,12 @@ services:
       HAPI_FHIR_BASE_URL: http://hapi-fhir:8080/fhir
       FHIR_IG_URL: ${FHIR_IG_URL}
       NODE_ENV: 'production'
-    configs: 
+    configs:
       - source: cares-hapi-fhir-fhirConfig.js
         target: /fhirConfig.js
     command: sh -c "cd / && npm i axios@v1.1.3 adm-zip && npm i wait-on -g && wait-on -t 600000 http-get://hapi-fhir:8080 && node /fhirConfig.js"
+    networks:
+      hapi-fhir:
 
 configs:
   cares-clickhouse-config-clickhouseConfig.js:
@@ -66,3 +72,11 @@ configs:
     name: cares-hapi-fhir-fhirConfig.js-${cares_hapi_fhir_fhirConfig_js_DIGEST:?err}
     labels:
       name: hapi-fhir
+
+networks:
+  clickhouse:
+    name: clickhouse_public
+    external: true
+  hapi-fhir:
+    name: hapi-fhir_public
+    external: true
