Update to platform version 2.2.1 and add keycloak as a dependency

--- a/.env.prod
+++ b/.env.prod
@@ -6,3 +6,10 @@ CLUSTERED_MODE=false
 DEBUG=0
 BASHLOG_FILE=0
 BASHLOG_FILE_PATH=platform.log
+
+# Identity Access Manager - Keycloak
+KC_FRONTEND_URL=https://keycloak.qa.cares-disi.gicsandbox.org
+KC_SUPERSET_ROOT_URL=https://superset.qa.cares-disi.gicsandbox.org
+
+# Superset
+KC_SUPERSET_SSO_ENABLED=true
